error pages for index and show

--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <title>Parkit</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-image: url('assets/No_Parking.jpg');
+    background-image: url('assets/parking.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 25%;
@@ -13,10 +17,20 @@
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
-    margin: 200px;
+    margin: 220px;
   }
 
-  div.dialog {
+  .opacity {
+    background-color: rgba(255,0,0, 0);
+    border-bottom: none; 
+  }
+
+  .opacity2 {
+    background-color: rgba(255,0,0, 0);
+    border-top: none; 
+  }
+
+/*  div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
@@ -24,24 +38,24 @@
 
   div.dialog > div {
     border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
+/*    border-right-color: #999;
+    border-left-color: #999;*/
+/*    border-bottom-color: #BBB;
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+  }*/
 
-  h1 {
+/*  h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
-  }
+  }*/
 
-  div.dialog > p {
+/*  div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -54,21 +68,38 @@
     border-top-color: #DADADA;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }*/
+  .row1 {
+    position: relative;
+    bottom: 200px;
+  }
+  .row2 {
+    position: relative;
+    top: 150px;
   }
   </style>
 </head>
 
 <body>
-
-  <div class="dialog">
-    <div>
-      <h1>Please try another address.</h1>
-      <p>Parking is prohibited at this location.</p>
+  <div class="row row1">
+    <div class="col-md-3"></div>
+<!--     <div class="col-md-3"></div> -->
+    <div class="dialog col-md-6">
+      <div class="well opacity">
+        <h1>Please try another address.</h1>
+      </div>
     </div>
-    <button>
-      <%= link_to 'Home', root_path, :class => 'btn btn-danger' %>
-    </button>
-
+    <div class="col-md-3"></div>
+  </div>
+  <div class="row row2">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="well opacity2">
+        <p>Parking is prohibited at this location.</p>
+        <%= link_to 'Home', root_path, class: 'btn btn-danger' %>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
   </div>
 </body>
 </html>
